--- a/public/static/style.css
+++ b/public/static/style.css
@@ -31,34 +31,81 @@ a {
     table-layout: fixed;
 }
 
-.id-th {
-    width: 20px;
+#mainTable tr td:nth-child(1),
+#mainTable tr th:nth-child(1),
+#mainTable tr th:nth-child(4),
+#mainTable tr td:nth-child(4) {
+    display: none;
+}
+
+#mainTable tr td:nth-child(3) {
+    text-align: center;
 }
 
 .span-th {
     width: 20px;
 }
 
-.past-th {
-    width: 80px;
-}
-
-.next-th {
-    width: 50px;
-}
-
 .cnt-th {
     width: 20px;
 }
 
+.next-th {
+    width: 40px;
+}
+
 .title-th {
-    width: 130px;
+    width: 150px;
 }
 
 .memo-th {
-    width: 190px;
+    width: 250px;
 }
 
 .action-th {
-    width: 23px;
+    width: 20px;
+}
+
+#modal-content table th {
+    width: 100px;
+}
+
+#modal-content table td {
+    width: 400px;
+}
+
+#modal-content input[type=text] {
+    width: 100%;
+}
+
+#modal-content textarea {
+    width: 100%;
+}
+
+#modal {
+    visibility: hidden;
+    position: fixed;
+    background-color: rgba(50, 50, 50, 0.7);
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+
+#loading-modal {
+    visibility: hidden;
+    position: fixed;
+    background-color: black;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+
+#modal-content {
+    margin: 20px;
+    padding: 10px;
+    background-color: white;
 }
