--- a/public/static/templates/antenna.html
+++ b/public/static/templates/antenna.html
@@ -12,23 +12,23 @@
         <table>
             <tr>
                 <th>タイトル</th>
-                <td><input type="text" name="name"></input>
+                <td><input type="text" data-header="name"></input>
                 </td>
             </tr>
             <tr>
                 <th>URL</th>
-                <td><input type="text" name="url"></input>
+                <td><input type="text" data-header="url"></input>
                 </td>
             </tr>
             <tr>
                 <th>メモ</th>
-                <td><input type="text" name="memo"></input>
+                <td><input type="text" data-header="memo"></input>
                 </td>
             </tr>
             <tr>
                 <th>周期</th>
                 <td>
-                    <select name="span">
+                    <select data-header="span">
                         {% for span_item in span_list %}
                         <option value="{{span_item.key}}">{{span_item.text}}</option>
                         {% endfor %}
@@ -38,10 +38,9 @@
             <tr>
                 <td colspan="2">
                     <input type="button" value="作成" id='createButton' disabled>
-                    <input type="button" value="上書き" id='updateButton' disabled>
                     <input type="button" value="クリア" id='clearButton' disabled>
-                    <input type="hidden" name="id">
-                    <input type="hidden" name="current">
+                    <input type="hidden" data-header="id">
+                    <input type="hidden" data-header="current">
                 </td>
             </tr>
         </table>
@@ -66,8 +65,8 @@
                 <td>{{item.id}}</td>
                 <th>{{util.span_key_to_text(item.span)}}</th>
                 <td>{{item.cnt_sc}}</td>
-                <td>{{item.past}}</td>
-                <td>{{item.next}}</td>
+                <td></td>
+                <td>{{item.next or item.end}}</td>
                 <td>{% if item.span == 'complete' %}<span>{{item.name | escape}}</span>{% else %}<a href="javascript:void(0)" />{{item.name | escape}}</a>{% endif %}{% if item.url %}
                     <a href="{{item.url}}" class="external" target="_blank"> 　</a>{% endif %}</td>
                 <td>{{item.memo}}</td>
@@ -80,18 +79,84 @@
                 {% endfor %}
         </tbody>
     </table>
+    <div id="modal">
+        <div id="modal-content">
+            <h2><span data-header="name"></span> の詳細</h2>
+            <table>
+                <tr>
+                    <th>id</th>
+                    <td data-header="id"></td>
+                </tr>
+                <tr>
+                    <th>周期</th>
+                    <td>
+                        <select name="span" data-header="span">
+                        {% for span_item in span_list %}
+                        <option value="{{span_item.key}}">{{span_item.text}}</option>
+                        {% endfor %}
+                    </select>
+                    </td>
+                </tr>
+                <tr>
+                    <th>作成日</th>
+                    <td data-header-from="start"></td>
+                </tr>
+                <tr>
+                    <th>完了日</th>
+                    <td data-header-from="end"></td>
+                </tr>
+                <tr>
+                    <th>前回</th>
+                    <td data-header-from="past"></td>
+                </tr>
+                <tr>
+                    <th>次回</th>
+                    <td data-header-from="next"></td>
+                </tr>
+                <tr>
+                    <th>タイトル</th>
+                    <td><input type="text" data-header="name"></td>
+                </tr>
+                <tr>
+                    <th>URL</th>
+                    <td><input type="text" data-header="url"></td>
+                </tr>
+                <tr>
+                    <th>メモ</th>
+                    <td><textarea data-header="memo"></textarea></td>
+                </tr>
+                <tr>
+                    <th>決定事項</th>
+                    <td><textarea data-header="decide"></textarea></td>
+                </tr>
+            </table>
+            <input type="button" value="更新">
+            <a href="javascript:void(0)" id="modal-close">閉じる</a>
+        </div>
+    </div>
+    <div id="loading-modal">
+        <img src="/public/static/img-loading.gif" width="80" height="80" alt="Now Loading..." />
+    </div>
     <script src='/public/static/myflow-client-util.js'></script>
     <script src='/public/static/myflow-client-core.js'></script>
     <script src='/public/static/myflow-client-consumer.js'></script>
     <script src='/public/static/myflow-client-components.js'></script>
     <script>
-        var buttons = selectAll('input[type=button]');
-        var options = new Options();
-        var mapperCreator = new MapperCreator(function(element) {
+        var trReader = new ElementReader(function(exchange) {
+            var element = exchange.getElement();
+            while (element.tagName.toLowerCase() !== 'tr') {
+                element = element.parentNode;
+            }
             var thtdElements = element.querySelectorAll('th, td');
             return {
                 'id': function() {
                     return thtdElements[0].innerText;
+                },
+                'past': function() {
+                    return thtdElements[3].textContent;
+                },
+                'next': function() {
+                    return thtdElements[4].textContent;
                 },
                 'name': function() {
                     return thtdElements[5].children[0].innerText;
@@ -118,7 +183,9 @@
                     return thtdElements[1].innerText === '完了';
                 },
             }
-        }, 'tr');
+        });
+        var buttons = selectAll('input[type=button]');
+        var options = new Options(byid('modal'));
 
         new Event('onload', window)
             .to(buttonEnable(buttons))
@@ -126,31 +193,32 @@
                 'name': 'ロード完了'
             }));
 
-        new Event('onclick', selectAll('a[href="javascript:void(0)"]'))
+        new Event('onclick', selectAll('a[href="javascript:void(0)"]:not([id])'))
             .to(function(exchange) {
-                var mapper = mapperCreator.create(exchange);
-                mapper.updateExchange(exchange, 'id');
+                var reader = trReader.create(exchange);
+                reader.updateExchange('id');
                 exchange.setHeader('method', 'update');
-                if (mapper.get('finish')) {
+                if (reader.read('finish')) {
                     if (window.confirm('このタスクを完了しますか？')) {
                         exchange.setHeader('finish', 'true');
                         return exchange;
                     }
                 }
                 else {
-                    if (mapper.get('future')) {
+                    if (reader.read('future')) {
                         exchange.setHeader('current', 'true');
                     }
                     return exchange;
                 }
             })
-            .to(direct('antenna-crud'))
+            .to(direct('antenna-crud'));
 
         new Event('onclick', selectAll('.future a.external'))
             .to(function(exchange) {
-                var mapper = mapperCreator.create(exchange);
-                if (!mapper.get('completed')) {
-                    mapper.updateExchange(exchange, 'id');
+
+                var reader = trReader.create(exchange);
+                if (!reader.read('completed')) {
+                    reader.updateExchange('id');
                     exchange.setHeader('current', 'true');
                     exchange.setHeader('method', 'update');
                     return exchange;
@@ -158,23 +226,41 @@
             })
             .to(direct('antenna-crud'));
 
-        new Event('onclick', collectNthChild(selectAll('#mainTable tbody tr'), 'td', 0))
+        new Event('onclick', collectNthChild(selectAll('#mainTable tbody tr'), 'th', 0))
             .to(function(exchange) {
-                var mapper = mapperCreator.create(exchange);
-                return mapper.updateExchange(exchange, ['name', 'url', 'memo', 'current', 'id', 'span']);
+                trReader.create(exchange).updateExchange(['past', 'next', 'name', 'url', 'memo', 'id', 'span']);
+                return exchange;
             })
-            .to(exchangeToForm(byid('createForm')))
-            .to(pageTop());
+            .to(modal(byid('loading-modal'), 'open'))
+            .task(request('/antenna-item'))
+            .to(modal(byid('loading-modal'), 'close'))
+            .to(modal(byid('modal'), 'open'));
+
+        new Event('onclick', selectAll('#modal, #modal-close'))
+            .to(function(exchange) {
+                var id = exchange.getElement().id;
+                if (id === 'modal' || id === 'modal-close') {
+                    return exchange;
+                }
+            })
+            .to(modal(byid('modal'), 'close'));
+
 
         new Event('onclick', selectAll('input[value="クリア"]'))
             .to(exchangeToForm(byid('createForm')))
+
+        new Event('onclick', selectAll('input[value="更新"]'))
+            .to(loadElement(byid('modal'), {
+                'method': 'update'
+            }))
+            .to(direct('antenna-crud'));
 
         new Event('onclick', selectAll('input[value="保留"], input[value="削除"]'))
             .to(buttonEnable(buttons, false))
             .to(function(exchange) {
                 var method = exchange.getElement().value === '保留' ? 'update' : 'delete';
-                var mapper = mapperCreator.create(exchange);
-                mapper.updateExchange(exchange, 'id')
+                var reader = trReader.create(exchange);
+                reader.updateExchange('id');
                 exchange.setHeader('method', method);
                 if (method === 'update') {
                     exchange.setHeader('reserve', 'true');
@@ -196,24 +282,13 @@
             })
             .to(direct('antenna-crud'))
 
-        new Event('onclick', selectAll('input[value="上書き"], input[value="作成"]'))
+        new Event('onclick', selectAll('input[value="作成"]'))
             .to(buttonEnable(buttons, false))
-            .to(formToExchange(byid('createForm')))
+            .to(loadElement(byid('createForm')))
             .to(function(exchange) {
-                if (exchange.getHeader('id') && exchange.getElement().id == 'updateButton') {
-                    if (window.confirm(exchange.getHeader('id') + '番を上書きしますか？')) {
-                        exchange.setHeader('method', 'update');
-                        return exchange;
-                    }
-                    else {
-                        buttonEnable(buttons)(exchange)
-                    }
-                }
-                else {
-                    delete exchange.getHeaders()['id'];
-                    exchange.setHeader('method', 'create');
-                    return exchange;
-                }
+                delete exchange.getHeaders()['id'];
+                exchange.setHeader('method', 'create');
+                return exchange;
             })
             .to(function(exchange) {
                 var name = exchange.getHeader('name');
